# bevy_ecs_tilemap

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml  code_quality.yml
assets/: Squares.tmx  custom_shader.wgsl  hex-tile-0.ktx2  hex-tile-1.ktx2  hex-tile-2.ktx2  hex-tiles.ktx2  hexagonal.tmx  iso_map.tmx  iso_map2.tmx  map.ldtk  map.tmx  rotate.tmx  textured_tile.wgsl
example_webgl2/: Cargo.toml  Makefile.toml  README.md  index.html
example_webgl2/assets/: map.tmx
example_webgl2/src/: main.rs
example_webgl2/src/helpers/: camera.rs  texture.rs
examples/: 3d_iso.rs  accessing_tiles.rs  anchor.rs  animation.rs  atlas_spacing.rs  basic.rs  bench.rs  chunk_size.rs  chunking.rs  color.rs  colors.rs  custom_shader.rs  custom_tile_scaling.rs  dynamic_map.rs  frustum_cull_test.rs  game_of_life.rs  hex_column.rs  hex_neighbors.rs  hex_neighbors_radius_chunks.rs  hex_radius_chunk.rs  hex_row.rs  hexagon_column.rs  hexagon_generation.rs  hexagon_row.rs  improved_iso.rs  iso.rs  iso_diamond.rs  iso_staggered.rs  layers.rs  ldtk.rs  map.rs  mouse_to_tile.rs  move_tile.rs  neighbors.rs  projection_testing.rs  random_map.rs  remove_tiles.rs  replace_material.rs  spacing.rs  sparse_tiles.rs  (+11 more)
examples/helpers/: anchor.rs  camera.rs  ldtk.rs  mod.rs  movement.rs  texture.rs  tiled.rs
examples/ldtk/: ldtk.rs  ldtk_usage.rs
examples/tiled/: tiled.rs  tiled_rotate.rs  tiled_usage.rs
examples_old/: animation.rs  atlas_spacing.rs  bench.rs  color.rs  game_of_life.rs  hex_column.rs  hex_row.rs  improved_iso.rs  iso_diamond.rs  iso_staggered.rs  layers.rs  map.rs  random_map.rs  remove_tiles.rs  replace_material.rs  sparse_tiles.rs  texture_atlas.rs  visibility.rs
examples_old/helpers/: camera.rs  movement.rs
examples_old/ldtk/: ldtk_usage.rs
examples_old/tiled/: tiled.rs  tiled_usage.rs
src/: anchor.rs  array_texture_preload.rs  chunk.rs  error.rs  helpers.rs  image.rs  layer.rs  layer_builder.rs  ldtk.rs  lib.rs  map.rs  map_query.rs  map_vec2.rs  mesher.rs  neighbors.rs  tile.rs  tile_atlas.rs  tiled.rs
src/helpers/: filling.rs  geometry.rs  mod.rs  neighbors.rs  projection.rs  transform.rs
src/helpers/hex_grid/: axial.rs  axial_system.rs  consts.rs  cube.rs  cube_system.rs  mod.rs  neighbors.rs  offset.rs  offset_system.rs
src/helpers/hexgrid/: axial.rs  consts.rs  cube.rs  offset.rs
src/helpers/iso_grid/: diamond.rs  mod.rs  staggered.rs
src/helpers/rect_grid/: diamond.rs  mod.rs  neighbors.rs  staggered.rs
src/helpers/square_grid/: diamond.rs  diamond_system.rs  mod.rs  neighbors.rs  staggered.rs  staggered_system.rs
src/map/: mod.rs
src/render/: chunk.rs  columnevenhex-tilemap.vert  columnhex-tilemap.vert  columnoddhex-tilemap.vert  diamondiso-tilemap.vert  draw.rs  extract.rs  hex-tilemap.frag  include_shader.rs  iso-tilemap.frag  iso-tilemap.vert  material.rs  mod.rs  pipeline.rs  prepare.rs  queue.rs  rowevenhex-tilemap.vert  rowhex-tilemap.vert  rowoddhex-tilemap.vert  square-tilemap.es.frag  square-tilemap.es.vert  square-tilemap.vert  staggerediso-tilemap.vert  texture_array_cache.rs  tilemap.es.vert  tilemap.frag  tilemap.vert  tilemap_data.rs
src/render/shaders/: column_even_hex.wgsl  column_hex.wgsl  column_odd_hex.wgsl  common.wgsl  diamond_iso.wgsl  mesh_output.wgsl  row_even_hex.wgsl  row_hex.wgsl  row_odd_hex.wgsl  square.wgsl  staggered_iso.wgsl  tilemap-atlas.wgsl  tilemap.wgsl  tilemap_fragment.wgsl  tilemap_vertex.wgsl  tilemap_vertex_output.wgsl
src/render2/: mod.rs  pipeline.rs  square.wgsl  tilemap_data.rs
src/render2/shaders/: tilemap.wgsl
src/tiles/: mod.rs  storage.rs
src_old/: chunk.rs  layer_builder.rs  lib.rs  map.rs  tile.rs  tile_atlas.rs
src_old/render/: mod.rs  texture_array_cache.rs  tilemap_data.rs
